# medqa-finetune

./: .gitignore  .gitmessage  LICENSE  README.md  main.py  pyproject.toml
notebooks/: 01_data_inspection.ipynb
scripts/: eval.py  prepare_data.py  train.py
wandb/: latest-run
wandb/run-20260327_183928-22f7f8ra/: run-22f7f8ra.wandb
wandb/run-20260327_183928-22f7f8ra/files/: config.yaml  diff.patch  wandb-metadata.json  wandb-summary.json
wandb/run-20260327_183928-22f7f8ra/files/code/scripts/: train.py
wandb/run-20260327_195056-02684pjm/: run-02684pjm.wandb
wandb/run-20260327_195056-02684pjm/files/: config.yaml  diff_471a1f94bd5c28e489173ddba0cbbb6d4e186445.patch  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20260327_195056-02684pjm/files/code/scripts/: train.py
