[project]
name = "medqa-finetune"
version = "0.1.0"
description = "Fine-tuning Qwen2.5 Instruct on MedQA using an RTX 5090"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "bitsandbytes>=0.49.2",
    "hf-transfer>=0.1.9",
    "peft>=0.18.1",
    "torch>=2.11.0",
    "transformers>=5.3.0",
    "trl>=0.24.0",
    "unsloth>=2026.3.10",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pandas>=3.0.1",
]
