[project]
name = "medqa-finetune"
version = "0.1.0"
description = "Fine-tuning Qwen2.5 Instruct on MedQA using an RTX 5090"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.3.0",
    "hf-transfer>=0.1.9",
    "peft>=0.18.1",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "trl>=0.29.1",
    "wandb>=0.25.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
]
